# axon_ai

./: .env  .gitignore  CORRECTIONS_RECAP.md  INCOHERENCES.md  README.md  TEST_README.md  main.py  pyproject.toml  pytest.ini  test_pipeline.py
brain-interface/: package-lock.json  package.json
brain-interface/app/: globals.css  layout.tsx  page.tsx
brain-interface/components/: AgentPanel.jsx  BottomPanel.jsx  Carousel.jsx  Dashboard.jsx  EEGViewer.jsx  OnboardingModal.jsx  PipelineBar.jsx  Sidebar.jsx  SlideICA.jsx  SlidePSD.jsx
brain-interface/lib/: SignalContext.js  data.js  useAgentSocket.js
drafts/: process_mne.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/components/: AgentPanel.jsx  BottomPanel.jsx  Dashboard.jsx  EEGViewer.jsx  OnboardingModal.jsx  PipelineBar.jsx  Sidebar.jsx  SlideSensors.jsx
frontend/lib/: data.js  useAgentSocket.js
main/: main.py
server/: database.py  docker-compose.yaml  main.py  models.py  utils.py
