[project]
name = "automating-eeg-preprocessing-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mistralai>=1.12.4",
    "mne>=1.11.0",
    "mne-bids>=0.18.0",
    "openneuro-py>=2026.1.0",
    "python-dotenv>=1.2.1",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "scikit-learn>=1.8.0",
    "picard>=2.13.3",
    "python-picard>=0.8.1",
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.41.0",
    "psycopg[binary]>=3.3.3",
    "alembic>=1.18.4",
    "sqlmodel>=0.0.37",
]
